# tco-ref-2

./: README.md  pyproject.toml  replit.md  requirements.txt
app/: charts.py
tco-ref/: replit.md
tco-ref/tco-ref/app/: app.py  charts.py
tco-ref/tco-ref/data/processed/: defaults_by_class.json
tco-ref/tco-ref/tco_core/: energy.py  residual.py  tires.py
tco-ref/tco-ref/tco_ref.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tco-ref/tco-ref/tests/: test_energy.py
tco_core/: cashflows.py  maintenance.py  models.py  validation.py
tco_ref.egg-info/: requires.txt
tests/: test_cashflow.py  test_other_costs.py  test_residual.py  test_tco.py  test_tires.py
