[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tco-ref"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "altair>=5.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tco_core", "app", "tests"]
